# evosim

./: .gitignore  CHANGELOG.md  GPU_WSL_HANDOFF.md  LICENSE  PROGRESS.md  README.md  SPEC.md  move-session-logs.ps1  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_conway.bat  run_conway.ps1  run_conway_view.bat  run_conway_view.ps1  run_foragers.bat  run_foragers.ps1  run_foragers_large_view.bat  run_foragers_large_view.ps1  run_foragers_view.bat  run_foragers_view.ps1  run_ga_benchmark.bat  run_ga_benchmark.ps1  run_ga_benchmark_view.bat  run_ga_benchmark_view.ps1
src/evosim/: __init__.py  backend.py  checkpoint.py  interaction.py  metrics.py  population.py  recorders.py  rng.py  scheduler.py  schema.py  sim.py  state.py  system.py
src/evosim/examples/: __init__.py  conway.py  foragers.py  foragers_large.py  ga_benchmark.py  pygame_viewer.py
src/evosim/operators/: __init__.py  crossover.py  mutation.py  selection.py
src/evosim/viz/: __init__.py  pygame_viewer.py  render.py
src/evosim/world/: __init__.py  base.py  fields.py  grid.py
tests/: test_backend.py  test_checkpoint.py  test_determinism.py  test_example_conway.py  test_example_foragers.py  test_example_ga_benchmark.py  test_example_viewer.py  test_interaction.py  test_metrics.py  test_operators.py  test_perf_smoke.py  test_population.py  test_recorders.py  test_rng.py  test_scheduler.py  test_schema.py  test_sim.py  test_state.py  test_viz.py  test_world_fields.py  test_world_grid.py
