[project]
name = "evosim"
version = "0.1.0"
description = "A modular, high-performance library for large-scale agent-based evolutionary simulations (JAX core)."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Kevin W (Aerion Dyseti)", email = "inblessedsilencewaiting@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["evolution", "simulation", "alife", "agent-based", "jax", "genetic-algorithm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Life",
]
dependencies = [
    "jax>=0.10.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
recorders = ["zarr>=2.18", "pyarrow>=16"]
viz = ["pygame>=2.5"]
viewer = ["moderngl>=5.10", "pyglet>=2.0"]

[project.urls]
Homepage = "https://github.com/aeriondyseti/evosim"
Repository = "https://github.com/aeriondyseti/evosim"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]
